@@ -844,7 +844,7 @@ public class BracketedPattern {
      * @param authorList an {@link AuthorList}
      * @return the initials of all authors' names
      */
-    static String authorsAlpha(AuthorList authorList) {
+    public static String authorsAlpha(AuthorList authorList) {
         StringBuilder alphaStyle = new StringBuilder();
         int maxAuthors;
         final boolean maxAuthorsExceeded;
@@ -874,7 +874,7 @@ public class BracketedPattern {
             List<String> vonAndLastNames = authorList.getAuthors().stream()
                                                      .limit(maxAuthors)
                                                      .map(Author::getNamePrefixAndFamilyName)
-                                                     .collect(Collectors.toList());
+                                                     .toList();
             for (String vonAndLast : vonAndLastNames) {
                 // replace all whitespaces by " "
                 // split the lastname at " "
@@ -902,7 +902,7 @@ public class BracketedPattern {
      * @return a string consisting of authors' last names separated by a `delimiter` and with any authors excess of
      * `maxAuthors` replaced with `suffix`
      */
-    private static String joinAuthorsOnLastName(AuthorList authorList, int maxAuthors, String delimiter, final String suffix) {
+    public static String joinAuthorsOnLastName(AuthorList authorList, int maxAuthors, String delimiter, final String suffix) {
         final String finalSuffix = authorList.getNumberOfAuthors() > maxAuthors ? suffix : "";
         return authorList.getAuthors().stream()
                          .map(author -> {
